<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@android:drawable/bottom_bar"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Choose Category"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#02050505" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@android:color/white"
        android:elevation="0dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/editTextTitle_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@android:color/white"
            android:hint="@string/hint_add_title"
            android:inputType="text"
            android:textColorHint="#757575" />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/purple_200" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Write_Short_description"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#0B0B0B" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white"
        android:elevation="0dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/editTextDescription_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@android:color/white"
            android:hint="@string/hint_add_Description"
            android:inputType="text"
            android:textColorHint="#757575" />

        <View
            android:id="@+id/type_id"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/purple_200" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/date_img"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="  "
        app:icon="@android:drawable/ic_menu_my_calendar" />

    <Button
        android:id="@+id/creation_date_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="  "
        app:icon="@android:drawable/ic_menu_my_calendar" />

    <TextView
        android:id="@+id/i"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Choose_Category_Tv"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#050505" />

    <TextView
        android:id="@+id/work_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/work_catigory"
        android:textColor="#040404" />

    <TextView
        android:id="@+id/personal_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:text="@string/Personal_category"
        android:textColor="#070707" />

    <TextView
        android:id="@+id/health_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:gravity="center_horizontal"
        android:text="@string/Health_category"
        android:textColor="#090909" />

    <TextView
        android:id="@+id/social_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/Social_category"
        android:textColor="#040404" />

    <Button
        android:id="@+id/addTaskBtn_id"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="28dp"
        android:background="@color/purple_200"
        android:text="@string/Save_Task_btn" />

    <Button
        android:id="@+id/updateBtn_id"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Update_Btn"
        android:visibility="invisible" />


</LinearLayout>