<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="405dp"
        android:layout_height="102dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="Done"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="Live"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="44dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="Archived"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/health_id_home"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/health"
        android:gravity="center"
        android:text="health"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:shapeAppearanceOverlay="@style/SpecificCornerRoundedTopR"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/personal_id_home"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/personal"
        android:gravity="center"
        android:text="@string/Personal_category"
        android:textColor="#0B0B0B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:shapeAppearanceOverlay="@style/SpecificCornerRoundedTopL"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/work_id_home"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="392dp"
        android:backgroundTint="@color/work"
        android:gravity="center"
        android:text="@string/work_catigory"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/SpecificCornerRoundedBottomL"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/social_id_home"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/social"
        android:gravity="center"
        android:text="@string/Social_category"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/SpecificCornerRoundedBottomR"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>